src/objects/Trace_Email__c.object
<CustomObject>
    <fields>
        <fullName>Claim_ID__c</fullName>
        <externalId>true</externalId>
        <label>Claim ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Claim__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claim</label>
        <referenceTo>MCAR_Claim_Management__c</referenceTo>
        <relationshipLabel>Trace Emails</relationshipLabel>
        <relationshipName>Trace_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Time_Opened__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>First Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Time_Opened__c</fullName>
        <label>Last Time Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Number_Of_Times_Email_Opened__c</fullName>
        <label>Number Of Times Email Opened</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Trace Email</label>
    <nameField>
        <displayFormat>ET-{0000}</displayFormat>
        <label>Email Trace</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trace Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>